assets/landing_bus.less
/* ... */
@font-face {
    font-family: 'Wotfard';
    font-style: normal;
    font-weight: @font-weight-extralight;
    src: local('Wotfard'), url('https://jemeditetouslesjours.fr/assets/fonts/wotfard-extralight-webfont.woff2') format('woff2');
}

@font-face {
    font-family: 'Wotfard';
    font-style: normal;
    font-weight: @font-weight-light;
    src: local('Wotfard'), url('https://jemeditetouslesjours.fr/assets/fonts/wotfard-light-webfont.woff2') format('woff2');
}

@font-face {
    font-family: 'Wotfard';
    font-style: normal;
    font-weight: @font-weight-regular;
    src: local('Wotfard'), url('https://jemeditetouslesjours.fr/assets/fonts/wotfard-regular-webfont.woff2') format('woff2');
}

@font-face {
    font-family: 'Wotfard';
    font-style: normal;
    font-weight: @font-weight-medium;
    src: local('Wotfard'), url('https://jemeditetouslesjours.fr/assets/fonts/wotfard-medium-webfont.woff2') format('woff2');
}

@font-face {
    font-family: 'Wotfard';
    font-style: normal;
    font-weight: @font-weight-semibold;
    src: local('Wotfard'), url('https://jemeditetouslesjours.fr/assets/fonts/wotfard-semibold-webfont.woff2') format('woff2');
}

@font-face {
    font-family: 'Wotfard';
    font-style: normal;
    font-weight: @font-weight-bold;
    src: local('Wotfard'), url('https://jemeditetouslesjours.fr/assets/fonts/wotfard-bold-webfont.woff2') format('woff2');
}

@import (inline) url('https://fonts.cdnfonts.com/css/sriracha');
@import url('https://fonts.googleapis.com/css2?family=Chewy&family=Lacquer&family=Permanent+Marker&family=Qwitcher+Grypen:wght@400;700&display=swap');


@font-family: 'Wotfard';
@font-family-mono: 'League Mono', 'Fira Mono', monospace;

@color-text: hsl(0deg, 0%, 100%);
@color-background: hsl(244.78deg 22.38% 10.09%);
@color-blurred-background: hsla(210deg, 30%, 8%, 0.85);

@color-primary: hsl(333deg, 100%, 52%);
@color-secondary: hsl(230deg, 92%, 63%);
@color-tertiary: hsl(53deg, 100%, 50%);
@color-decorative: hsl(200deg, 50%, 60%);
@color-muted: hsl(210deg, 38%, 15%);

@color-error: hsl(340deg, 95%, 60%);
@color-error-background: hsla(340deg, 95%, 43%, 0.1);

@color-success: hsl(160deg, 100%, 40%);
@color-success-background: hsla(160deg, 100%, 40%, 0.1);

@color-alert: hsl(30deg, 100%, 50%);
@color-alert-background: hsla(38deg, 100%, 50%, 0.1);

@color-gray-300: hsl(223deg, 5%, 30%);
@color-gray-500: hsl(223deg, 5%, 50%);
@color-gray-700: hsl(223deg, 5%, 60%);

@color-link: hsl(250deg, 100%, 77.5%);

@selection-background-color: hsl(0deg, 0%, 100%);
@selection-text-color: hsl(0deg, 0%, 0%);

@gradient-buy: linear-gradient(245deg, hsl(333deg, 100%, 52%) 5%, hsl(333deg, 100%, 40%) 90%);

@reach-dialog: 1;

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0px;
    padding: 0px;
    border: 0px;
    font: inherit;
    vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    text-rendering: optimizelegibility;
}

h1,
h2,
h3,
h4,
h5,
h6,
strong {
    font-weight: @font-weight-semibold;
}

html {
    scroll-behavior: smooth;
}

* {
    -webkit-font-smoothing: antialiased;
    box-sizing: border-box;
    line-height: 1.45;
}

body {
    font-family: @font-family;
    font-weight: @font-weight-regular;
    color: @color-text;
    background: @color-background;
}

main {
    max-width: 100%;
    overflow: hidden;
}


a {
    color: @color-link;
    text-decoration: none 1px;
    text-underline-offset: 2px;
}

em {
    font-style: italic;
}

.spacer-8 {
    min-width: 8px;
    min-height: 8px;
}

.spacer-16 {
    min-width: 16px;
    min-height: 16px;
}

.spacer-24 {
    min-width: 24px;
    min-height: 24px;
}

.spacer-32 {
    min-width: 32px;
    min-height: 32px;
}

.spacer-36 {
    min-width: 36px;
    min-height: 36px;
}

.spacer-64 {
    min-width: 64px;
    min-height: 64px;
}

.spacer-72 {
    min-width: 72px;
    min-height: 72px;
}

.spacer-128 {
    min-width: 128px;
    min-height: 128px;
}

.spacer-192 {
    min-width: 192px;
    min-height: 192px;
}
/* ... */

